WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291894
Decoding should continue until we have some defined time ahead of currentTime
https://bugs.webkit.org/show_bug.cgi?id=291894
Summary
Decoding should continue until we have some defined time ahead of currentTime
Jean-Yves Avenard [:jya]
Reported
2025-04-22 05:02:00 PDT
Following
293860@main
, we now only decode 3 or 10 frames ahead of currentTime depending of the decoder being HW accelerated or not. Instead, let decode to have sufficient time ahead, and use 133ms like CoreMedia uses with AVSampleBufferDisplayLayer.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-22 05:03:36 PDT
<
rdar://problem/149756577
>
Jean-Yves Avenard [:jya]
Comment 2
2025-04-22 05:29:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44369
EWS
Comment 3
2025-04-24 15:32:30 PDT
Committed
294084@main
(40e8bb366e26): <
https://commits.webkit.org/294084@main
> Reviewed commits have been landed. Closing PR #44369 and removing active labels.
Marta Darbinyan
Comment 4
2025-04-25 08:40:42 PDT
Reopened Bugzilla. REGRESSION(
294084@main
): ASSERTION FAILED: :VideoMediaSampleRenderer::decodeNextSampleIfNeeded, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=292063
.
Jean-Yves Avenard [:jya]
Comment 5
2025-04-25 19:21:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44544
EWS
Comment 6
2025-04-25 20:31:43 PDT
Committed
294144@main
(5ea7a3e8bb26): <
https://commits.webkit.org/294144@main
> Reviewed commits have been landed. Closing PR #44544 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug